screen.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
/* stylelint-disable */
/* Keep reset CSS to one minified line */
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
/* stylelint-enable */

/* stylelint-disable */
/* https://necolas.github.io/normalize.css/
   v7.0.0 (forms section only)
   License: MIT
*/
/* Forms
   ========================================================================== */

/**
* 1. Change the font styles in all browsers (opinionated).
* 2. Remove the margin in Firefox and Safari.
*/

button,
input,
optgroup,
select,
textarea {
  font-family: sans-serif; /* 1 */
  font-size: 100%; /* 1 */
  line-height: 1.15; /* 1 */
  margin: 0; /* 2 */
}

/**
* Show the overflow in IE.
* 1. Show the overflow in Edge.
*/

button,
input { /* 1 */
  overflow: visible;
}

/**
* Remove the inheritance of text transform in Edge, Firefox, and IE.
* 1. Remove the inheritance of text transform in Firefox.
*/

button,
select { /* 1 */
  text-transform: none;
}

/**
* 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
*    controls in Android 4.
* 2. Correct the inability to style clickable types in iOS and Safari.
*/

button,
html [type="button"], /* 1 */
[type="reset"],
[type="submit"] {
  -webkit-appearance: button; /* 2 */
}

/**
* Remove the inner border and padding in Firefox.
*/

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

/**
* Restore the focus styles unset by the previous rule.
*/

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

/**
* Correct the padding in Firefox.
*/

fieldset {
  padding: 0.35em 0.75em 0.625em;
}

/**
* 1. Correct the text wrapping in Edge and IE.
* 2. Correct the color inheritance from `fieldset` elements in IE.
* 3. Remove the padding so developers are not caught out when they zero out
*    `fieldset` elements in all browsers.
*/

legend {
  box-sizing: border-box; /* 1 */
  color: inherit; /* 2 */
  display: table; /* 1 */
  max-width: 100%; /* 1 */
  padding: 0; /* 3 */
  white-space: normal; /* 1 */
}

/**
* 1. Add the correct display in IE 9-.
* 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
*/

progress {
  display: inline-block; /* 1 */
  vertical-align: baseline; /* 2 */
}

/**
* Remove the default vertical scrollbar in IE.
*/

textarea {
  overflow: auto;
}

/**
* 1. Add the correct box sizing in IE 10-.
* 2. Remove the padding in IE 10-.
*/

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

/**
* Correct the cursor style of increment and decrement buttons in Chrome.
*/

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/**
* 1. Correct the odd appearance in Chrome and Safari.
* 2. Correct the outline style in Safari.
*/

[type="search"] {
  -webkit-appearance: textfield; /* 1 */
  outline-offset: -2px; /* 2 */
}

/**
* Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
*/

[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
* 1. Correct the inability to style clickable types in iOS and Safari.
* 2. Change font properties to `inherit` in Safari.
*/

::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}
/* stylelint-enable */

html {
  font-size: 1.25em; /* 20 / 16 = 1.25 */
  line-height: 1.5em; /* 30 / 20 = 1.5 */
  font-family: Georgia, "Times New Roman", Times, serif;
}

body {
  min-height: 100vh;
  background-color: #25A0AC;
  background-image: url(img/hills.png);
  background-position: center bottom;
  background-size: 100vw;
  background-repeat: no-repeat;
}

header,
main#content,
form#registration-form {
  padding-top: 1.5em; /* 30 / 20 = 1.5 */
  padding-bottom: 1.5em; /* 30 / 20 = 1.5 */
  padding-left: 1.2em; /* 24 / 20 = 1.2 */
  padding-right: 1.2em; /* 24 / 20 = 1.2 */
}

header {
  background-color: #217FC9;
  line-height: 1.5em;
  font-weight: bold;
}
header h1::before {
  background-image: url(img/wing.png);
  background-size: cover;
  content: '';
  float: left;
  width: 1.5em;
  height: 1.5em;
}

main#content {
  background-color: rgba(255, 255, 255, 0.8);
}

section.banner {
  text-align: center;
}

label {
  display: block;
}

header,
section.banner,
form#registration-form li {
  margin-bottom: 0.6em; /* 12 / 20 = 0.6 */
}

form#registration-form li p.hint {
  font-size: 0.75em;
}

form#registration-form li p.user-alert {
  margin-top: 0.6em;
  color: red;
}

form#registration-form input:not([type='checkbox']) {
  width: 100%;
  box-sizing: border-box;
}
form#registration-form input[type='checkbox'] {
  float: left;
  margin-right: 1em;
}

@media screen and (min-width: 1000px) {
  /*
    5-column grid for content
    1000px total
     50   140   50   140   50   140   50   140   50   140   50
    |  |       |  |       |  |       |  |       |  |       |  |
    |  |       |  |       |  |       |  |       |  |       |  |
    |  |       |  [ - - - - - CONTENT - - - - - ]  |       |  |
    |  |       |  |       |  |       |  |       |  |       |  |
  */

  #content {
    padding-left: 24%; /* 240 / 1000 = 0.24 */
    padding-right: 24%; /* 240 / 1000 = 0.24 */
  }

  form#registration-form li.half-size {
    width: 50%;
    box-sizing: border-box;
    float: left;
  }

}

